Customised Batch list - fix for overlapping select

--- a/assets/css/agent-customer.css
+++ b/assets/css/agent-customer.css
@@ -16196,3 +16196,33 @@ timeline-event .outbound-panel-right:after {
 #call_notif_min>i.fa{
     margin-right: 10px;
 }
+.custom-batch-container {
+    position: fixed;z-index: 150;right: 374px;bottom: 0px;border-radius: 5px 5px 0 0;width: 420px;height: 0px;background: #fff;overflow: hidden;
+    opacity: 0;
+    overflow-y: scroll;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+    -webkit-box-shadow: 0px 1px 10px 2px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 1px 10px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 1px 10px 2px rgba(0, 0, 0, 0.1);
+}
+.custom-batch-container.show-batch {
+    height: 160px;
+    bottom: 14px;
+    opacity: 1;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+.custom-batch-item {
+    padding: 5px;
+    border-bottom: solid 1px #eee;
+}
+.custom-batch-item:hover {
+    background: #fafafa;
+}
